--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_API_URL="http://localhost:5141/api"
+# REACT_APP_BACKEND_API_URL="http://localhost:5141/api"
+REACT_APP_BACKEND_API_URL="http://102.65.136.147:5141/api"
